--- a/package.json
+++ b/package.json
@@ -8,15 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "bootstrap": "^5.1.3",
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.19",
     "typescript": "4.5.5"
   }
 }
