--- a/.github/workflows/deploy-davin-ui.yml
+++ b/.github/workflows/deploy-davin-ui.yml
@@ -19,10 +19,11 @@ jobs:
           node-version: ${{ secrets.NODE_VERSION }}
       - name: Setup PM2
         run: npm install -g pm2
-      - name: Build Next App
-      - run: npm install
-          npm run build
+      - name: Install App Dependencies
+        run: npm install
+      - name: Build React Application
+        run: npm run build
       - name: Start PM2
-      - run: pm2 stop davin-ui
+        run: pm2 stop davin-ui
           pm2 delete davin-ui
           pm2 start pm2.config.js
