--- a/.github/workflows/deploy-davin-ui.yml
+++ b/.github/workflows/deploy-davin-ui.yml
@@ -23,6 +23,4 @@ jobs:
       - name: Build React Application
         run: npm run build
       - name: Start PM2
-        run: pm2 stop davin-ui
-          pm2 delete davin-ui
-          pm2 start pm2.config.js
+        run: pm2 delete davin-ui 2> /dev/null &&  pm2 start pm2.config.js
