--- a/.github/workflows/deploy-davin-ui.yml
+++ b/.github/workflows/deploy-davin-ui.yml
@@ -23,4 +23,5 @@ jobs:
       - name: Build React Application
         run: npm run build
       - name: Start PM2
-        run: pm2 delete davin-ui --silent 2> /dev/null &&  pm2 start pm2.config.json
+        run: pm2 delete davin-ui --silent
+          pm2 start pm2.config.json
