--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "^5.1.3",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-bootstrap": "^2.1.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "reactjs-percentage-circle": "^1.0.0"
@@ -24,7 +24,8 @@
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.19",
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.5.5"
   }
 }
