--- a/package.json
+++ b/package.json
@@ -20,9 +20,17 @@
   "devDependencies": {
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "autoprefixer": "^10.4.2",
-    "eslint": "8.8.0",
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.10",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "sass": "^1.49.9",
     "typescript": "4.5.5"
   }
