Add About us Preview Section

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,13 @@
         "import/resolver": {
             "typescript": {}
         }
-    }
+    },
+    "react/function-component-definition": [
+        2,
+        {
+            "namedComponents": "arrow-function",
+            "unnamedComponents": "arrow-function"
+        }
+    ]
 
 }
