--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "bootstrap": "^5.1.3",
+    "luxon": "^2.3.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
-    "reactjs-percentage-circle": "^1.0.0"
+    "reactjs-percentage-circle": "^1.0.0",
+    "swiper": "^8.1.0"
   },
   "devDependencies": {
+    "@types/luxon": "^2.3.1",
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
