--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "dependencies": {
     "@heroicons/react": "^1.0.5",
     "bootstrap": "^5.1.3",
+    "flutterwave-react-v3": "^1.2.0",
+    "formik": "^2.2.9",
     "luxon": "^2.3.1",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-phone-number-input": "^3.1.50",
+    "react-toastify": "^8.2.0",
     "reactjs-percentage-circle": "^1.0.0",
     "swiper": "^8.1.0"
   },
