--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-phone-number-input": "^3.1.50",
     "react-toastify": "^8.2.0",
     "reactjs-percentage-circle": "^1.0.0",
+    "sharp": "^0.30.3",
     "swiper": "^8.1.0"
   },
   "devDependencies": {
